[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["ManarAbdelkarim <manarbdelkarim434@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
jupyter = "^1.0.0"
seaborn = "^0.11.1"
sklearn = "^0.0"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
